--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ G++ = g++
 G++_FLAGS = -c -std=c++11 -Wall
 
 OBJECTS = GaussianPyramid.o OpticalFlow.o Stochastic.o
-TARGET = flow.a
+TARGET = libflow.a
 
 all: $(TARGET)
 
