--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 G++ = g++
 G++_FLAGS = -c -std=c++11 -Wall
 
-OBJECTS = GaussianPyramid.o OpticalFlow.o Stochastic.o
+OBJECTS = GaussianPyramid.o OpticalFlow.o Stochastic.o FlowInterpolation.o
 TARGET = libflow.a
 
 all: $(TARGET)
